<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="mhst.project.uc04anduc09.ThemNhaTroActivity" >

	<TextView 
	    android:id="@+id/title"
	    android:text="@string/dang_thong_tin_nha_tro"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="25sp"
	    android:textStyle="bold"
	    android:layout_centerHorizontal="true"
	    android:layout_margin="15dp" />
	<LinearLayout 
	    android:id="@+id/linear_nha_tro"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/title"
	    android:layout_alignParentLeft="true"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:orientation="horizontal"
	    android:gravity="center_vertical">
		<TextView 
		    android:text="@string/ten_nha_tro"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="20sp"/>
		<EditText 
		    android:id="@+id/edit_ten_nha_tro"
		    android:layout_weight="1"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:hint="test"
		    android:lines="1"
		    android:layout_marginLeft="10dp"/>
	</LinearLayout>
	<LinearLayout 
	    android:id="@+id/linear_dia_chi"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/linear_nha_tro"
	    android:layout_alignLeft="@+id/linear_nha_tro"
	    android:layout_marginTop="10dp"
	    android:orientation="horizontal"
	    android:layout_alignRight="@+id/linear_nha_tro">
		<TextView 
		    android:text="@string/dia_chi"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="20sp"/>
		<EditText 
		    android:id="@+id/edit_dia_chi"
		    android:layout_weight="1"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:hint="test"
		    android:lines="1"
		    android:layout_marginLeft="10dp"/>
	</LinearLayout>
	<LinearLayout 
	    android:id="@+id/linear_gia_phong"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/linear_dia_chi"
	    android:layout_alignLeft="@+id/linear_nha_tro"
	    android:layout_marginTop="10dp"
	    android:orientation="horizontal"
	    android:layout_alignRight="@+id/linear_nha_tro">
		<TextView 
		    android:text="@string/gia_phong"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="20sp"/>
		<EditText 
		    android:id="@+id/edit_gia_phong"
		    android:layout_weight="1"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:hint="test"
		    android:lines="1"
		    android:layout_marginLeft="10dp"/>
	</LinearLayout>
	<LinearLayout 
	    android:id="@+id/linear_so_phong"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/linear_gia_phong"
	    android:layout_alignLeft="@+id/linear_nha_tro"
	    android:layout_marginTop="10dp"
	    android:orientation="horizontal"
	    android:layout_alignRight="@+id/linear_nha_tro">
		<TextView 
		    android:text="@string/so_phong"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="20sp"/>
		<EditText 
		    android:id="@+id/edit_so_phong"
		    android:layout_weight="1"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:hint="test"
		    android:lines="1"
		    android:layout_marginLeft="10dp"/>
	</LinearLayout>
	<LinearLayout 
	    android:id="@+id/linear_dien_tich_phong"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/linear_so_phong"
	    android:layout_alignLeft="@+id/linear_nha_tro"
	    android:layout_marginTop="10dp"
	    android:orientation="horizontal"
	    android:layout_alignRight="@+id/linear_nha_tro">
		<TextView 
		    android:text="@string/dien_tich_phong"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="20sp"/>
		<EditText 
		    android:id="@+id/edit_dien_tich_phong"
		    android:layout_weight="1"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:hint="test"
		    android:lines="1"
		    android:layout_marginLeft="10dp"/>
	</LinearLayout>
	<CheckBox 
	    android:id="@+id/check_o_ghep"
	    android:text="@string/duoc_o_ghep"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/linear_dien_tich_phong"
	    android:layout_alignLeft="@+id/linear_nha_tro"
	    android:layout_marginTop="10dp"
	    android:textSize="20sp" />
	<TextView 
	    android:id="@+id/tt_thong_tin_them"
	    android:text="@string/thong_tin_them"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="20sp"
	    android:layout_below="@+id/check_o_ghep"
	    android:layout_marginTop="10dp"
	    android:layout_alignLeft="@+id/linear_nha_tro" />
	<EditText 
	    android:id="@+id/edit_thong_tin_them"
	    android:hint="test"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:lines="1"
	    android:layout_below="@+id/tt_thong_tin_them"
	    android:layout_alignLeft="@+id/linear_nha_tro"
	    android:layout_marginTop="10dp" />

	<Button
	    android:id="@+id/button_huy_bo"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignRight="@+id/edit_thong_tin_them"
	    android:text="@string/huy_bo"
	    android:textSize="15sp"
	    android:layout_margin="5dp"
	    android:onClick="onHuyBo" />
	<Button
	    android:id="@+id/button_tiep_tuc"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/tiep_tuc"
	    android:textSize="15sp"
	    android:layout_toLeftOf="@+id/button_huy_bo"
	    android:layout_alignBottom="@+id/button_huy_bo"
	    android:onClick="onTiepTuc" />

</RelativeLayout>
